<resources>
    <string name="app_name">SkripstiTanpaMetode</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Daily Reminder</string>
    <string name="nav_header_subtitle">This app helps you to manage your time wisely</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>

    <string name="home_second">Home Second</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="default_senin">Monday</string>
    <string name="default_selasa">Tuesday</string>
    <string name="default_rabu">Wednesday</string>
    <string name="default_kamis">Thursday</string>
    <string name="default_jumat">Friday</string>
    <string name="default_sabtu">Saturday</string>
    <string name="default_minggu">Sunday</string>

    <string name="daily_schedule">Daily Schedule</string>
    <string name="weekly_goals">Weekly Goals</string>
    <string name="roles_and_goals">Roles and Goals</string>

    <string name="search_keyword">Search Keyword</string>
    <string name="roles">Roles</string>
    <string name="add">Add</string>
    <string name="goals">Goals</string>
    <string name="print">Print</string>

    <string-array name="jenis_alarm">
        <item>Disabled</item>
        <item>On Time</item>
        <item>An Hour Before</item>
        <item>Six Hours Before</item>
        <item>Twelve Hours Before</item>
    </string-array>
</resources>
