<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_roles_and_goals">

    <fragment
        android:id="@+id/nav_tuesday"
        android:name="com.latihanandroid.skripsitanpametode.DailyScheduleListFragment"
        android:label="@string/default_selasa"
        tools:layout="@layout/fragment_daily_schedule_list"></fragment>

    <fragment
        android:id="@+id/nav_wednesday"
        android:name="com.latihanandroid.skripsitanpametode.DailyScheduleListFragment"
        android:label="@string/default_rabu"
        tools:layout="@layout/fragment_daily_schedule_list" />

    <fragment
        android:id="@+id/nav_thursday"
        android:name="com.latihanandroid.skripsitanpametode.DailyScheduleListFragment"
        android:label="@string/default_kamis"
        tools:layout="@layout/fragment_daily_schedule_list" />
    <fragment
        android:id="@+id/nav_monday"
        android:name="com.latihanandroid.skripsitanpametode.DailyScheduleListFragment"
        android:label="@string/default_senin"
        tools:layout="@layout/fragment_daily_schedule_list" />
    <fragment
        android:id="@+id/nav_friday"
        android:name="com.latihanandroid.skripsitanpametode.DailyScheduleListFragment"
        android:label="@string/default_jumat"
        tools:layout="@layout/fragment_daily_schedule_list" />
    <fragment
        android:id="@+id/nav_saturday"
        android:name="com.latihanandroid.skripsitanpametode.DailyScheduleListFragment"
        android:label="@string/default_sabtu"
        tools:layout="@layout/fragment_daily_schedule_list" />
    <fragment
        android:id="@+id/nav_sunday"
        android:name="com.latihanandroid.skripsitanpametode.DailyScheduleListFragment"
        android:label="@string/default_minggu"
        tools:layout="@layout/fragment_daily_schedule_list" />
    <fragment
        android:id="@+id/nav_roles_and_goals"
        android:name="com.latihanandroid.skripsitanpametode.RolesAndGoalsListFragment"
        android:label="@string/roles_and_goals"
        tools:layout="@layout/fragment_roles_and_goals_list" />
    <fragment
        android:id="@+id/nav_to_add_roals_goals"
        android:name="com.latihanandroid.skripsitanpametode.AddRolesAndGoalsFragment"
        android:label="Add Roles And Goals"
        tools:layout="@layout/fragment_add_roles_and_goals" />
    <fragment
        android:id="@+id/nav_update_delete_roles_and_goals"
        android:name="com.latihanandroid.skripsitanpametode.UpdateDeleteRolesAndGoalsFragment"
        android:label="Update"
        tools:layout="@layout/fragment_update_delete_roles_and_goals" />
    <fragment
        android:id="@+id/nav_add_daily_schedule_fragment"
        android:name="com.latihanandroid.skripsitanpametode.AddDailyScheduleFragment"
        android:label="Add Daily Schedule Fragment"
        tools:layout="@layout/fragment_add_daily_schedule" />
    <fragment
        android:id="@+id/nav_update_delete_daily_schedule"
        android:name="com.latihanandroid.skripsitanpametode.UpdateDeleteDailyScheduleFragment"
        android:label="Update"
        tools:layout="@layout/fragment_update_delete_daily_schedule" />
    <fragment
        android:id="@+id/nav_choose_roles_and_goals"
        android:name="com.latihanandroid.skripsitanpametode.ChooseRolesAndGoalsFragment"
        android:label="Choose Roles And Goals"
        tools:layout="@layout/fragment_choose_roles_and_goals" >
    </fragment>
</navigation>